# rknn_component

./: CMakeLists.txt  README.md
example/Background_blur/: CMakeLists.txt  readme.txt
example/Background_blur/auth/: README.md  rkauth_tool_bin  rkdevice_info
example/Background_blur/src/: log.h  v4l2_camera.cpp  v4l2_camera.h  v4l_achieve.cpp  v4l_achieve.h  x11_background_blur.cpp  x11_demo_egl.cpp
example/Background_blur/src/modules/: carplate.h  crowd_count.h  object_detection.h  pose.h
example/rtsp_demo/: CMakeLists.txt  readme.md  rtsp_gst.cc  rtsp_gst_app_xv.cc.cc  rtsp_gst_xv.cc
include/: argc.h  rknn_mobilenet.h
src/: argc.cc  main.c  rknn_camera.cc  rknn_mobilenet.cc
